--- a/index.html
+++ b/index.html
@@ -1,2 +1,56 @@
-<h1> This is Scott's page </h>
-<p> My topic sentence of my soon to be paragraph </p>
+<head>
+  <title>My Health Story</title>
+  <link href= "src/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
+<form class="login" method="get" action="/login">
+  <button type="submit">Login</button>
+</form>
+<form class="createanaccount" method="get" action="/createanaccount">
+  <button type="submit">Create an Account</button>
+</form>
+
+<!-- Body and Image -->
+<body>
+<h1>
+    <div class="row">
+      <div class="column">
+        <p class="home-intro">
+          <br><br>
+          Welcome to My Health Story, where all of your medical information is safely stored in one place. You'll never miss your next appointment or worry about not remembering what prescriptions you're currently taking. 
+          <br><br>
+          Here at My Health Story, we'll help you have all of your information readily available for your next appointment, whethere you're going to see your family doctor, a specialist, or an emergency room doctor. 
+          When language barriers and literacy comes between the patients and provider, we step in to help provide a place for them to be able to share the information quickly. 
+          <br><br>
+          My Health Story will help keep patients calm and have one less thing to worry about, as no shuffling of business cards or fumbling of medication bottles are required. This allows for quicker assessment, treatment, and admission or discharge.</p>
+      </div>
+      <div class="column">
+        <img class="happy-staff-patient" src="images/Medical care-rafiki.png">
+     </div> 
+    </div>
+</h1>
+</body>
+<!-- // Body and Image -->
+
+<!-- footer -->
+<div class="footer">
+    <div class="footer-content">
+      <div class="footer-section about"></div>
+      <div class="footer-section links"></div>
+      <div class="footer-section contact-form"></div>
+    </div>
+  
+    <div class="footer-bottom">
+      <ul>
+        <a li>English</a></li> |
+        <a li>Spanish</a></li> |
+        <a li>Chinese</a> </li>|
+        <a li>More</a></li>
+      </ul>
+      &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
+    </div>
+  </div>
+  <!-- // footer -->
