Added about-us, reformated footer

--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
 <!-- Body and Image -->
 <body>
 <h1>
-    <div class="row">
-      <div class="column">
-        <p class="home-intro">
-          <br><br>
-          Welcome to My Health Story, where all of your medical information is safely stored in one place. You'll never miss your next appointment or worry about not remembering what prescriptions you're currently taking. 
-          <br><br>
-          Here at My Health Story, we'll help you have all of your information readily available for your next appointment, whethere you're going to see your family doctor, a specialist, or an emergency room doctor. 
-          When language barriers and literacy comes between the patients and provider, we step in to help provide a place for them to be able to share the information quickly. 
-          <br><br>
-          My Health Story will help keep patients calm and have one less thing to worry about, as no shuffling of business cards or fumbling of medication bottles are required. This allows for quicker assessment, treatment, and admission or discharge.</p>
-      </div>
-      <div class="column">
-        <img class="happy-staff-patient" src="images/Medical care-rafiki.png">
-     </div> 
+  <p class="title">My Health Story</p>
+  <div class="row">
+    <div class="column">
+      <p class="home-intro">
+        <br><br>
+        <br><br>
+        Welcome to My Health Story, where all of your medical information is safely stored in one place. You'll never miss your next appointment or worry about not remembering what prescriptions you're currently taking. 
+        <br><br>
+        Here at My Health Story, we'll help you have all of your information readily available for your next appointment, whethere you're going to see your family doctor, a specialist, or an emergency room doctor. 
+        When language barriers and literacy comes between the patients and provider, we step in to help provide a place for them to be able to share the information quickly. 
+        <br><br>
+        My Health Story will help keep patients calm and have one less thing to worry about, as no shuffling of business cards or fumbling of medication bottles are required. This allows for quicker assessment, treatment, and admission or discharge.</p>
     </div>
+    <div class="column">
+      <img class="happy-staff-patient" src="images/Medical care-rafiki.png">
+    </div> 
+  </div>
 </h1>
 </body>
 <!-- // Body and Image -->
