--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
 
+  <nav class="navbar navar-fixed-top">
+    <span class="navbar-brand">
+      <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
+    </span>
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  
   <form class="login" method="get" action="/login">
     <button type="submit">Login</button>
   </form>
