Added contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -18,7 +18,7 @@
       </ul>
     </div>
   </nav>
-  
+
   <form class="login" method="get" action="/login">
     <button type="submit">Login</button>
   </form>
@@ -26,32 +26,33 @@
     <button type="submit">Create an Account</button>
   </form>
 
-  <!-- Body and Image -->
-<body>
+ <!-- Body and Map -->
+ <body>
     <h1>
-        <p class="title">About Us</p>
+        <p class="title">Contact Us</p>
         <div class="row">
-          <div class="column">
-            <img class="Scott-image" src="images/Medicine-bro.png">
-            <p class="Scott">Scott Atkinson</p>
-                <p class="Scott-intro">
-                    Scott is a current pre-med student at Keck Graduate Instutite.
-                </p>
-            </div>
-          <div class="column">
-            <img class="Joann-image" src="images/Doctor-pana.png">
-            <p class="Joann">Joann Sy</p>
-                <p class="Joann-intro">
-                    Joann is a current pre-med student at Keck Graduate Institute.<br>As an aspiring physician, she hopes improve accessibility to healthcare for all <br>while creating an inclusive space for affirmative care.
-                </p>
-         </div> 
+            <div class="column-contact">
+              <div class="container">
+                  <label class="text-body">Name</label>
+                  <input id="name" type="text"><br><br>
+                  <label class="text-body">Email</label>
+                  <input id="email" type="email"><br><br>
+                  <label class="text-body">Inquiry</label><br>
+                  <textarea id="inquiry" name="inquiry" rows="4" cols="40"></textarea><br>
+                  <button class="button-submit">Submit</button>
+              </div>
+              </div>
+            <div class="column-map">
+                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=15TOs6OH_dmraOBQr8oZjkPYUN5CS03bb" width="800" height="400px"></iframe>
+                <p class="contact-myhealthstory">My Health Story<br>535 Watson Drive<br>Claremont, CA 91711<br>(323) 455-4029</p>
+            </div> 
         </div> 
     </h1>
-    </body>
-    <!-- // Body and Image -->
+ </body>
+ <!-- // Body and Map -->
 
-    <!-- footer -->
-<div class="footer">
+ <!-- footer -->
+ <div class="footer">
     <div class="footer-content">
       <div class="footer-section about"></div>
       <div class="footer-section links"></div>
