--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="about-us.html">About Us</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="contact-us.html">Contact</a></li>
     </ul>
   </div>
 </nav>
