update navbar, added login page, added create account page, added javascript

--- a/contact-us.html
+++ b/contact-us.html
@@ -10,21 +10,18 @@
     <span class="navbar-brand">
       <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
     </span>
-    <div class="container-fluid">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about-us.html">About Us</a></li>
-        <li><a href="contact-us.html">Contact</a></li>
-      </ul>
+    <div class="topnav">
+      <a href="index.html">Home</a>
+      <a href="about-us.html">About Us</a>
+      <a href="contact-us.html">Contact</a>
+      <div class="topnav-right">
+        <a href="login.html">Login</a>
+        <a href="create-account.html">Create Account</a>
+      </div>
     </div>
   </nav>
 
-  <form class="login" method="get" action="/login">
-    <button type="submit">Login</button>
-  </form>
-  <form class="createanaccount" method="get" action="/createanaccount">
-    <button type="submit">Create an Account</button>
-  </form>
+  
 
  <!-- Body and Map -->
  <body>
