--- a/create-account.html
+++ b/create-account.html
@@ -14,8 +14,7 @@
       <a href="about-us.html">About Us</a>
       <a href="contact-us.html">Contact</a>
       <div class="topnav-right">
-        <a href="login.html">Login</a>
-        <a href="create-account.html">Create Account</a>
+        <a href="login.html">Login/Sign Up</a>
       </div>
     </div>
   </nav>
