--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
       </div>
     </div>
   </nav>
-<!-- NAVBAR -->
+<!--// NAVBAR -->
 
 
 <!-- LOGIN -->
@@ -35,7 +35,7 @@
         <input type="email" class="input" id="user_email" autocomplete="off" placeholder="Email">
         <input type="text" class="input" id="user_name" autocomplete="off" placeholder="Username">
         <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
-        <input type="submit" class="button" value="Sign Up">
+        <input type="submit" class="button" value="Sign Up" formaction="overview.html">
       </form><!--.login-form-->
       <div class="help-text">
         <p>By signing up, you agree to our</p>
@@ -50,7 +50,7 @@
         <input type="checkbox" class="checkbox" id="remember_me">
         <label for="remember_me">Remember me</label>
 
-        <input type="submit" class="button" value="Login">
+        <input type="submit" class="button" value="Login" formaction="overview.html>
       </form><!--.login-form-->
       <div class="help-text">
         <p><a href="#">Forget your password?</a></p>
@@ -58,7 +58,7 @@
     </div><!--.login-tab-content-->
   </div><!--.tabs-content-->
 </div><!--.form-wrap-->
-<!-- LOGIN -->
+<!-- // LOGIN -->
 
     <!-- footer -->
 <div class="footer">
