removed form action

--- a/login.html
+++ b/login.html
@@ -30,11 +30,11 @@
 
   <div class="tabs-content">
     <div id="signup-tab-content" class="active">
-      <form class="signup-form" action="" method="post">
+      <form class="signup-form" action="overview.html" method="post">
         <input type="email" class="input" id="user_email" autocomplete="off" placeholder="Email">
         <input type="text" class="input" id="user_name" autocomplete="off" placeholder="Username">
         <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
-        <input type="submit" class="button" value="Sign Up" formaction="overview.html">
+        <input type="submit" class="button" value="Sign Up">
       </form><!--.login-form-->
       <div class="help-text">
         <p>By signing up, you agree to our</p>
