Added insurance file and pictures

--- a/contact-us.html
+++ b/contact-us.html
@@ -28,7 +28,7 @@
         <p class="title">Contact Us</p>
         <div class="row">
             <div class="column-contact">
-              <div class="container">
+              <div class="container-contact"><br>
                   <label class="text-body">Name</label>
                   <input id="name" type="text"><br><br>
                   <label class="text-body">Email</label>
@@ -39,7 +39,7 @@
               </div>
               </div>
             <div class="column-map">
-                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=15TOs6OH_dmraOBQr8oZjkPYUN5CS03bb" width="800" height="400px"></iframe>
+                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=15TOs6OH_dmraOBQr8oZjkPYUN5CS03bb" width="600" height="400px"></iframe>
                 <p class="contact-myhealthstory">My Health Story<br>535 Watson Drive<br>Claremont, CA 91711<br>(323) 455-4029</p>
             </div> 
         </div> 
