--- a/providers.html
+++ b/providers.html
@@ -24,7 +24,46 @@
     <h1>
       <p class="title">Providers</p>
     </h1>
+    <br>
+    <div class="provider-upload">
+      <p class="text-provider">Upload your provider's business card here!</p><br>
+      <form action="/business_cards.php">
+        <input type="file" id="myFile" name="filename"><br>
+        <button type="submit" form="form1" value="Submit">Submit</button>      
+      </form>
+    </div>
+  <hr>
+    <button class="accordion">Primary Care Physician</button>
+    <div class="panel">
+      <p>Dr. Ronald Castillo, MD</p>
+      <img class="insurance-upload-complete" src="images/Health professional team-pana.png">
+      <img class="insurance-upload-complete" src="images/Doctor-Business-card-1-CRC.png">
+    </div>
+
+    <button class="accordion">Ob/Gyn</button>
+    <div class="panel">
+      <p>Dr. Stephanie Castellon, MD</p>
+      <img class="insurance-upload-complete" src="images/Midwives-amico.png">
+    </div>
+
+    <button class="accordion">Radiologist</button>
+    <div class="panel">
+      <p>Dr. Juan Carlos Jones, DO</p>
+      <img class="insurance-upload-complete" src="images/Radiography-pana-2.png">
+    </div>
+
+    <button class="accordion">Cardiologist</button>
+    <div class="panel">
+      <p>Dr. Sandy Huynh, DO</p>
+      <img class="insurance-upload-complete" src="images/Doctor-rafiki.png">
+    </div>
 </body>
+
+
+
+
+
+
 <!-- // Body and Image -->
 
 <!-- footer -->
@@ -46,3 +85,6 @@
     </div>
   </div>
   <!-- // footer -->
+
+
+<script src="src/scripts.js"></script>
