--- a/demographics.html
+++ b/demographics.html
@@ -22,8 +22,310 @@
  <!-- Body and Image -->
 <body>
     <h1>
-      <p class="title">Demographics</p>
+      <p class="title">Demographics</p><hr>
     </h1>
+    <div class="demographic-form" >
+      <form>
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname" required>
+        <label for="mname">Middle name:</label>
+        <input type="text" id="mname" name="mname">
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname" required><br>
+        <label for="birth-sex">Birth Sex:</label>
+          <select id="birth-sex" required>
+            <option value="NA">--</option>
+            <option value="female">Female</option>
+            <option value="intersex">Intersex</option>
+            <option value="male">Male</option>
+          </select>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday" name="birthday" required><br>
+        <label for="gender-identity">Gender Identity:</label>
+        <input type="text" id="gender-identity" name="gender-identity">
+        <label for="pronouns">Pronouns:</label>
+        <input type="text" id="pronouns" name="pronouns"><br>
+        <label for="street-address">Street Address:</label>
+        <input type="text" id="street-address" name="street-address" required>
+        <label for="apt-suite">Apt #:</label>
+        <input type="text" id="apt-suite" name="apt-suite"><br>
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" required>
+        <label for="state">State:</label>
+          <select>
+            <option value="NA">--</option>
+            <option value="AL">Alabama</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+        <label for="zip-code">Zip Code:</label>
+        <input type="text" id="zip-code" name="zip-code" required><br>
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" required><br>
+        <label for="home-phone">Home Phone Number:</label>
+        <input type="tel" id="home-phone" name="home-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+        <label for="mobile-phone">Mobile Phone Number:</label>
+        <input type="tel" id="mobile-phone" name="mobile-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+      </form>
+    </div>
+
+    <h1>
+      <p class="title">Emergency Contact #1</p><hr>
+    </h1>
+    <div class="emergency-contact-form" >
+      <form> 
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname" required>
+        <label for="mname">Middle name:</label>
+        <input type="text" id="mname" name="mname">
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname" required><br>
+        <label for="birth-sex">Birth Sex:</label>
+          <select id="birth-sex" required>
+            <option value="NA">--</option>
+            <option value="female">Female</option>
+            <option value="intersex">Intersex</option>
+            <option value="male">Male</option>
+          </select>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday" name="birthday" required><br>
+        <label for="gender-identity">Gender Identity:</label>
+        <input type="text" id="gender-identity" name="gender-identity">
+        <label for="pronouns">Pronouns:</label>
+        <input type="text" id="pronouns" name="pronouns"><br>
+        <label for="street-address">Street Address:</label>
+        <input type="text" id="street-address" name="street-address" required>
+        <label for="apt-suite">Apt #:</label>
+        <input type="text" id="apt-suite" name="apt-suite"><br>
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" required>
+        <label for="state">State:</label>
+          <select>
+            <option value="NA">--</option>
+            <option value="AL">Alabama</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+        <label for="zip-code">Zip Code:</label>
+        <input type="text" id="zip-code" name="zip-code" required><br>
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" required><br>
+        <label for="home-phone">Home Phone Number:</label>
+        <input type="tel" id="home-phone" name="home-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+        <label for="mobile-phone">Mobile Phone Number:</label>
+        <input type="tel" id="mobile-phone" name="mobile-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+      </form>
+    </div>
+    
+    <h1>
+      <p class="title">Emergency Contact #2</p><hr>
+    </h1>
+    <div class="emergency-contact-form" >
+      <form> 
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname" required>
+        <label for="mname">Middle name:</label>
+        <input type="text" id="mname" name="mname">
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname" required><br>
+        <label for="birth-sex">Birth Sex:</label>
+          <select id="birth-sex" required>
+            <option value="NA">--</option>
+            <option value="female">Female</option>
+            <option value="intersex">Intersex</option>
+            <option value="male">Male</option>
+          </select>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday" name="birthday" required><br>
+        <label for="gender-identity">Gender Identity:</label>
+        <input type="text" id="gender-identity" name="gender-identity">
+        <label for="pronouns">Pronouns:</label>
+        <input type="text" id="pronouns" name="pronouns"><br>
+        <label for="street-address">Street Address:</label>
+        <input type="text" id="street-address" name="street-address" required>
+        <label for="apt-suite">Apt #:</label>
+        <input type="text" id="apt-suite" name="apt-suite"><br>
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" required>
+        <label for="state">State:</label>
+          <select>
+            <option value="NA">--</option>
+            <option value="AL">Alabama</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+        <label for="zip-code">Zip Code:</label>
+        <input type="text" id="zip-code" name="zip-code" required><br>
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" required><br>
+        <label for="home-phone">Home Phone Number:</label>
+        <input type="tel" id="home-phone" name="home-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+        <label for="mobile-phone">Mobile Phone Number:</label>
+        <input type="tel" id="mobile-phone" name="mobile-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+      </form>
+    </div>
+    <hr>
+    <button onclick="myFunction()">Save</button>
+    <p id="save"></p>
+    <script>
+    function myFunction() {
+      var txt;
+      if (confirm("Press OK to Confirm Changes!")) {
+        txt = "Your updates have been saved!";
+      } else {
+        txt = "No changes have been made.";
+      }
+      document.getElementById("save").innerHTML = txt;
+    }
+    </script>
+
 </body>
 <!-- // Body and Image -->
 
