modified navbar, links to homepage, added tables to prescription and appointments

--- a/about-us.html
+++ b/about-us.html
@@ -29,7 +29,7 @@
             <img class="Scott-image" src="images/Medicine-bro.png">
             <p class="Scott">Scott Atkinson</p>
                 <p class="Scott-intro">
-                    Scott is a current pre-med student at Keck Graduate Instutite.
+                    Scott is a current pre-med student at Keck Graduate Instutite. As an aspiring physician, he hopes to make a positive impact on the world while encouraging his patients to live healthy lives. 
                 </p>
             </div>
           <div class="column">
