--- a/insurance.html
+++ b/insurance.html
@@ -10,7 +10,7 @@
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
   </span>
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="about-us.html">About Us</a>
     <a href="contact-us.html">Contact</a>
     <div class="topnav-right">
