--- a/reports.html
+++ b/reports.html
@@ -9,12 +9,13 @@
     <span class="navbar-brand">
       <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
     </span>
-    <div class="container-fluid">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about-us.html">About Us</a></li>
-        <li><a href="contact-us.html">Contact</a></li>
-      </ul>
+    <div class="topnav">
+      <a class="active" href="index.html">Home</a>
+      <a href="about-us.html">About Us</a>
+      <a href="contact-us.html">Contact</a>
+      <div class="topnav-right">
+        <a href="overview.html">Overview Page</a>
+      </div>
     </div>
   </nav>
  
