--- a/demographics.html
+++ b/demographics.html
@@ -10,11 +10,11 @@
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
   </span>
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="about-us.html">About Us</a>
     <a href="contact-us.html">Contact</a>
     <div class="topnav-right">
-      <a href="login.html">Login/Sign Up</a>
+      <a href="overview.html">Overview Page</a>
     </div>
   </div>
 </nav>
