--- a/prescriptions.html
+++ b/prescriptions.html
@@ -10,11 +10,11 @@
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
   </span>
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="about-us.html">About Us</a>
     <a href="contact-us.html">Contact</a>
     <div class="topnav-right">
-      <a href="login.html">Login/Sign Up</a>
+      <a href="overview.html">Overview Page</a>
     </div>
   </div>
 </nav>
@@ -25,6 +25,55 @@
       <p class="title">Prescriptions</p>
     </h1>
 </body>
+<div class="insurance-upload">
+  <p class="text-insurance">Upload your prescriptions here!</p><br>
+  <form action="/insurance_cards.php">
+    <input type="file" id="myFile" name="filename"><br>
+    <input type="submit" class="ins-upload-button">
+  </form>
+</div>
+<br>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Doseage</th>
+      <th scope="col">Time per Day</th>
+      <th scope="col">Date Prescribed</th>
+      <th scope="col">Refills Remaining</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td data-label="Account">Pantoprazole</td>
+      <td data-label="Due Date">5mg</td>
+      <td data-label="Amount">1 before breakfast</td>
+      <td data-label="Period">3/31/2016</td>
+      <td data-label="Period">1</td>
+    </tr>
+    <tr>
+      <td scope="row" data-label="Account">Hydralazine</td>
+      <td data-label="Due Date">25mg</td>
+      <td data-label="Amount">2x/day</td>
+      <td data-label="Period">02/01/2016</td>
+      <td data-label="Period">2</td>
+    </tr>
+    <tr>
+      <td scope="row" data-label="Account">Vitamin D3</td>
+      <td data-label="Due Date">5000UI</td>
+      <td data-label="Amount">1x day</td>
+      <td data-label="Period">02/29/2016</td>
+      <td data-label="Period">3</td>
+    </tr>
+    <tr>
+      <td scope="row" data-label="Acount">Lisinopril</td>
+      <td data-label="Due Date">10mg</td>
+      <td data-label="Amount">Before bed</td>
+      <td data-label="Period">01/01/2016</td>
+      <td data-label="Period">2</td>
+    </tr>
+  </tbody>
+</table>
 <!-- // Body and Image -->
 
 <!-- footer -->
