--- a/create-account.html
+++ b/create-account.html
@@ -1,23 +1,31 @@
+<!-- NAVBAR -->
 <head>
-    <title>My Health Story</title>
-    <link href= "src/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  </head>
-  <nav class="navbar navar-fixed-top">
-    <span class="navbar-brand">
-      <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
-    </span>
-    <div class="topnav">
-      <a href="index.html">Home</a>
-      <a href="about-us.html">About Us</a>
-      <a href="contact-us.html">Contact</a>
-      <div class="topnav-right">
-        <a href="login.html">Login/Sign Up</a>
-      </div>
+  <title>My Health Story</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <link href= "src/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</head>
+
+<nav class="navbar navar-fixed-top">
+  <span class="navbar-brand">
+    <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
+  </span>
+  <div class="topnav">
+    <a href="index.html">Home</a>
+    <a href="about-us.html">About Us</a>
+    <a href="contact-us.html">Contact</a>
+    <div id="google_translate_element" class="translate-navbar">
+    <div class="topnav-right">
+      <a class="active-tab" href="login.html">Login/Sign Up</a>
     </div>
-  </nav>
+  </div>
+</nav>
+
+<!--// NAVBAR -->
 <!-- LOGIN -->
 <div class="form-wrap">
   <div class="tabs">
@@ -57,22 +65,10 @@
 <!-- LOGIN -->
   <!-- footer -->
 <div class="footer">
-    <div class="footer-content">
-      <div class="footer-section about"></div>
-      <div class="footer-section links"></div>
-      <div class="footer-section contact-form"></div>
-    </div>
-  
     <div class="footer-bottom">
-      <ul>
-        <a li>English</a></li> |
-        <a li>Spanish</a></li> |
-        <a li>Chinese</a> </li>|
-        <a li>More</a></li>
-      </ul>
       &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
     </div>
   </div>
-  <!-- // footer -->
+<!-- // footer -->
 
-  <script src="src/scripts.js"></script>
+<script type="text/javascript" src="src/scripts.js"></script>  
