--- a/medical-history.html
+++ b/medical-history.html
@@ -1,24 +1,39 @@
 <head>
   <title>My Health Story</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href= "src/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
   </span>
   <div class="topnav">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about-us.html">About Us</a>
     <a href="contact-us.html">Contact</a>
-    <div class="topnav-right">
-      <a href="overview.html">Overview Page</a>
-    </div>
+    <div id="google_translate_element" class="translate-navbar">
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">My Profile</button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="demographics.html">Demographics</a>
+          <a href="daily-log.html">Daily Log</a>
+          <a href="appointments.html">Appointments</a>
+          <a class="active-tab" href="medical-history.html">Medical History</a>
+          <a href="providers.html">Providers</a>
+          <a href="prescriptions.html">Prescriptions</a>
+          <a href="reports.html">Reports</a>
+          <a href="insurance.html">Insurance</a>
+          <a href="logout.html">Logout</a>
+        </div>
+    </div> 
   </div>
 </nav>
- 
+
 <!-- Body and Image -->
 <body>
     <h1>
@@ -29,20 +44,10 @@
 
 <!-- footer -->
 <div class="footer">
-    <div class="footer-content">
-      <div class="footer-section about"></div>
-      <div class="footer-section links"></div>
-      <div class="footer-section contact-form"></div>
-    </div>
-  
     <div class="footer-bottom">
-      <ul>
-        <a li>English</a></li> |
-        <a li>Spanish</a></li> |
-        <a li>Chinese</a> </li>|
-        <a li>More</a></li>
-      </ul>
       &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
     </div>
   </div>
   <!-- // footer -->
+
+  <script type="text/javascript" src="src/scripts.js"></script>  
