--- a/about-us.html
+++ b/about-us.html
@@ -1,24 +1,27 @@
 <head>
-    <title>My Health Story</title>
-    <link href= "src/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  </head>
-
-  <nav class="navbar navar-fixed-top">
-    <span class="navbar-brand">
-      <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
-    </span>
-    <div class="topnav">
-      <a href="index.html">Home</a>
-      <a href="about-us.html">About Us</a>
-      <a href="contact-us.html">Contact</a>
-      <div class="topnav-right">
-        <a href="login.html">Login/Sign Up</a>
-      </div>
-    </div>
-  </nav>
+  <title>My Health Story</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href= "src/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</head>
+<nav class="navbar navar-fixed-top">
+  <span class="navbar-brand">
+    <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
+  </span>
+  <div class="topnav">
+    <a href="index.html">Home</a>
+    <a class="active-tab" href="about-us.html">About Us</a>
+    <a href="contact-us.html">Contact</a>
+    <div id="google_translate_element" class="translate-navbar">
+    <div class="topnav-right">
+      <a href="login.html">Login/Sign Up</a>
+    </div> 
+  </div>
+</nav>
   
   <!-- Body and Image -->
 <body>
@@ -36,7 +39,7 @@
             <img class="Joann-image" src="images/Doctor-pana.png">
             <p class="Joann">Joann Sy</p>
                 <p class="Joann-intro">
-                    Joann is a current pre-med student at Keck Graduate Institute.<br>As an aspiring physician, she hopes improve accessibility to healthcare for all <br>while creating an inclusive space for affirmative care.
+                    Joann is a current pre-med student at Keck Graduate Institute. As an aspiring physician, she hopes improve accessibility to healthcare for all while creating an inclusive space for affirmative care.
                 </p>
          </div> 
         </div> 
@@ -46,20 +49,10 @@
 
     <!-- footer -->
 <div class="footer">
-    <div class="footer-content">
-      <div class="footer-section about"></div>
-      <div class="footer-section links"></div>
-      <div class="footer-section contact-form"></div>
-    </div>
-  
     <div class="footer-bottom">
-      <ul>
-        <a li>English</a></li> |
-        <a li>Spanish</a></li> |
-        <a li>Chinese</a> </li>|
-        <a li>More</a></li>
-      </ul>
       &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
     </div>
   </div>
   <!-- // footer -->
+
+  <script type="text/javascript" src="src/scripts.js"></script>
