--- a/demographics.html
+++ b/demographics.html
@@ -1,48 +1,350 @@
 <head>
   <title>My Health Story</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href= "src/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
   </span>
   <div class="topnav">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about-us.html">About Us</a>
     <a href="contact-us.html">Contact</a>
-    <div class="topnav-right">
-      <a href="overview.html">Overview Page</a>
-    </div>
+    <div id="google_translate_element" class="translate-navbar">
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">My Profile</button>
+        <div id="myDropdown" class="dropdown-content">
+          <a class="active-tab" href="demographics.html">Demographics</a>
+          <a href="daily-log.html">Daily Log</a>
+          <a href="appointments.html">Appointments</a>
+          <a href="medical-history.html">Medical History</a>
+          <a href="providers.html">Providers</a>
+          <a href="prescriptions.html">Prescriptions</a>
+          <a href="reports.html">Reports</a>
+          <a href="insurance.html">Insurance</a>
+          <a href="logout.html">Logout</a>
+        </div>
+    </div> 
   </div>
 </nav>
  
  <!-- Body and Image -->
 <body>
     <h1>
-      <p class="title">Demographics</p>
+      <p class="title">Demographics</p><hr>
     </h1>
+    <h3>
+      <p class="demo-title">My Information</p></span>
+    </h3>
+    <div class="demographic-form">
+      <form>
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname" required>
+        <label for="mname">Middle name:</label>
+        <input type="text" id="mname" name="mname">
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname" required><br>
+        <label for="birth-sex">Birth Sex:</label>
+          <select id="birth-sex" required>
+            <option value="NA">--</option>
+            <option value="female">Female</option>
+            <option value="intersex">Intersex</option>
+            <option value="male">Male</option>
+          </select>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday" name="birthday" required><br>
+        <label for="gender-identity">Gender Identity:</label>
+        <input type="text" id="gender-identity" name="gender-identity">
+        <label for="pronouns">Pronouns:</label>
+        <input type="text" id="pronouns" name="pronouns"><br>
+        <label for="street-address">Street Address:</label>
+        <input type="text" id="street-address" name="street-address" required>
+        <label for="apt-suite">Apt #:</label>
+        <input type="text" id="apt-suite" name="apt-suite"><br>
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" required>
+        <label for="state">State:</label>
+          <select>
+            <option value="NA">--</option>
+            <option value="AL">Alabama</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+        <label for="zip-code">Zip Code:</label>
+        <input type="text" id="zip-code" name="zip-code" required><br>
+        <label for="email">Email Address:</label>
+        <input type="email" id="user_email" name="email" required><br>
+        <label for="home-phone">Home Phone Number:</label>
+        <input type="tel" id="home-phone" name="home-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+        <label for="mobile-phone">Mobile Phone Number:</label>
+        <input type="tel" id="mobile-phone" name="mobile-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+      </form>
+    </div>
+<hr>
+    <h3>
+      <p class="demo-title">Emergency Contact #1</p>
+    </h3>
+    <div class="emergency-contact-form" >
+      <form> 
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname" required>
+        <label for="mname">Middle name:</label>
+        <input type="text" id="mname" name="mname">
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname" required><br>
+        <label for="birth-sex">Birth Sex:</label>
+          <select id="birth-sex" required>
+            <option value="NA">--</option>
+            <option value="female">Female</option>
+            <option value="intersex">Intersex</option>
+            <option value="male">Male</option>
+          </select>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday" name="birthday" required><br>
+        <label for="gender-identity">Gender Identity:</label>
+        <input type="text" id="gender-identity" name="gender-identity">
+        <label for="pronouns">Pronouns:</label>
+        <input type="text" id="pronouns" name="pronouns"><br>
+        <label for="street-address">Street Address:</label>
+        <input type="text" id="street-address" name="street-address" required>
+        <label for="apt-suite">Apt #:</label>
+        <input type="text" id="apt-suite" name="apt-suite"><br>
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" required>
+        <label for="state">State:</label>
+          <select>
+            <option value="NA">--</option>
+            <option value="AL">Alabama</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+        <label for="zip-code">Zip Code:</label>
+        <input type="text" id="zip-code" name="zip-code" required><br>
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" required><br>
+        <label for="home-phone">Home Phone Number:</label>
+        <input type="tel" id="home-phone" name="home-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+        <label for="mobile-phone">Mobile Phone Number:</label>
+        <input type="tel" id="mobile-phone" name="mobile-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+      </form>
+    </div>
+    <hr>
+    <h3>
+      <p class="demo-title">Emergency Contact #2</p>
+    </h3>
+    <div class="emergency-contact-form" >
+      <form> 
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname" required>
+        <label for="mname">Middle name:</label>
+        <input type="text" id="mname" name="mname">
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname" required><br>
+        <label for="birth-sex">Birth Sex:</label>
+          <select id="birth-sex" required>
+            <option value="NA">--</option>
+            <option value="female">Female</option>
+            <option value="intersex">Intersex</option>
+            <option value="male">Male</option>
+          </select>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday" name="birthday" required><br>
+        <label for="gender-identity">Gender Identity:</label>
+        <input type="text" id="gender-identity" name="gender-identity">
+        <label for="pronouns">Pronouns:</label>
+        <input type="text" id="pronouns" name="pronouns"><br>
+        <label for="street-address">Street Address:</label>
+        <input type="text" id="street-address" name="street-address" required>
+        <label for="apt-suite">Apt #:</label>
+        <input type="text" id="apt-suite" name="apt-suite"><br>
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" required>
+        <label for="state">State:</label>
+          <select>
+            <option value="NA">--</option>
+            <option value="AL">Alabama</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+        <label for="zip-code">Zip Code:</label>
+        <input type="text" id="zip-code" name="zip-code" required><br>
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" required><br>
+        <label for="home-phone">Home Phone Number:</label>
+        <input type="tel" id="home-phone" name="home-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+        <label for="mobile-phone">Mobile Phone Number:</label>
+        <input type="tel" id="mobile-phone" name="mobile-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+      </form>
+    </div>
+    <hr>
+    <div class="myDemo-button">
+    <button onclick="myDemo()">Save</button>
+    <p id="myDemo-save"></p>
+    </div>
+    <br>
+
 </body>
 <!-- // Body and Image -->
-
+<br><br><br>
 <!-- footer -->
 <div class="footer">
-    <div class="footer-content">
-      <div class="footer-section about"></div>
-      <div class="footer-section links"></div>
-      <div class="footer-section contact-form"></div>
-    </div>
-  
-    <div class="footer-bottom">
-      <ul>
-        <a li>English</a></li> |
-        <a li>Spanish</a></li> |
-        <a li>Chinese</a> </li>|
-        <a li>More</a></li>
-      </ul>
-      &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
-    </div>
+  <div class="footer-bottom">
+    &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
   </div>
-  <!-- // footer -->
+</div>
+<!-- // footer -->
+
+  <script type="text/javascript" src="src/scripts.js"></script>
