--- a/login.html
+++ b/login.html
@@ -1,26 +1,31 @@
 <!-- NAVBAR -->
 <head>
-    <title>My Health Story</title>
-    <link href= "src/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  </head>
-  <nav class="navbar navar-fixed-top">
-    <span class="navbar-brand">
-      <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
-    </span>
-    <div class="topnav">
-      <a href="index.html">Home</a>
-      <a href="about-us.html">About Us</a>
-      <a href="contact-us.html">Contact</a>
-      <div class="topnav-right">
-        <a href="login.html">Login/Sign Up</a>
-      </div>
-    </div>
-  </nav>
-<!--// NAVBAR -->
+  <title>My Health Story</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <link href= "src/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</head>
 
+<nav class="navbar navar-fixed-top">
+  <span class="navbar-brand">
+    <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
+  </span>
+  <div class="topnav">
+    <a href="index.html">Home</a>
+    <a href="about-us.html">About Us</a>
+    <a href="contact-us.html">Contact</a>
+    <div id="google_translate_element" class="translate-navbar">
+    <div class="topnav-right">
+      <a class="active-tab" href="login.html">Login/Sign Up</a>
+    </div>
+  </div>
+</nav>
+
+<!--// NAVBAR -->
 <!-- LOGIN -->
 <div class="form-wrap">
   <div class="tabs">
@@ -46,9 +51,10 @@
       <form class="login-form" action="" method="post">
         <input type="text" class="input" id="user_login" autocomplete="off" placeholder="Email or Username">
         <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
-        <input type="checkbox" class="checkbox" id="remember_me">
-        <label for="remember_me">Remember me</label>
-
+        <div class="help-text"><p>
+          <input type="checkbox" class="checkbox" id="remember_me">
+          <label for="remember_me">Remember me</label></p>
+        </div>
         <input type="submit" class="button" value="Login" formaction="overview.html">
       </form><!--.login-form-->
       <div class="help-text">
@@ -61,22 +67,10 @@
 
     <!-- footer -->
 <div class="footer">
-  <div class="footer-content">
-    <div class="footer-section about"></div>
-    <div class="footer-section links"></div>
-    <div class="footer-section contact-form"></div>
-  </div>
-
   <div class="footer-bottom">
-    <ul>
-      <a li>English</a></li> |
-      <a li>Spanish</a></li> |
-      <a li>Chinese</a> </li>|
-      <a li>More</a></li>
-    </ul>
     &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
   </div>
 </div>
 <!-- // footer -->
 
-<script src="src/scripts.js"></script>
+<script type="text/javascript" src="src/scripts.js"></script>
