--- a/providers.html
+++ b/providers.html
@@ -1,48 +1,101 @@
 <head>
   <title>My Health Story</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href= "src/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
   </span>
   <div class="topnav">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about-us.html">About Us</a>
     <a href="contact-us.html">Contact</a>
-    <div class="topnav-right">
-      <a href="overview.html">Overview Page</a>
-    </div>
+    <div id="google_translate_element" class="translate-navbar">
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">My Profile</button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="demographics.html">Demographics</a>
+          <a href="daily-log.html">Daily Log</a>
+          <a href="appointments.html">Appointments</a>
+          <a href="medical-history.html">Medical History</a>
+          <a class="active-tab" href="providers.html">Providers</a>
+          <a href="prescriptions.html">Prescriptions</a>
+          <a href="reports.html">Reports</a>
+          <a href="insurance.html">Insurance</a>
+          <a href="logout.html">Logout</a>
+        </div>
+    </div> 
   </div>
 </nav>
- 
+
  <!-- Body and Image -->
 <body>
     <h1>
       <p class="title">Providers</p>
     </h1>
-</body>
-<!-- // Body and Image -->
+    <br>
+    <div class="provider-upload">
+      <p class="text-provider">Upload your provider's business card here!</p><br>
+      <form action="/business_cards.php">
+        <label for="specialty">Specialty:</label>
+        <input type="text" id="specialty" name="specialty" required><br><br>
+        <label for="providers-name">Provider's Name:</label>
+        <input type="text" id="providers-name" name="providers-name" required><br><br>
+        <input type="file" id="myFile" name="filename"><br>
+        <input type="file" id="myFile" name="filename"><br>
+        <button type="button" onclick="showPCP()">Submit</button>
+      </form>
+    </div>
+    <hr>
 
+    <div id="accordion-1">
+    <button class="accordion">Primary Care Physician</button>
+     <div class="panel">
+        <p>Dr. Ronald Castillo, MD</p>
+        <img class="insurance-upload-complete" src="images/Health professional team-pana.png">
+        <img class="insurance-upload-complete" src="images/Doctor-Business-card-1-CRC.png">
+     </div>
+     </div>
+
+    <button class="accordion">Ob/Gyn</button>
+    <div class="panel">
+      <p>Dr. Stephanie Castellon, MD</p>
+      <img class="insurance-upload-complete" src="images/Midwives-amico.png">
+    </div>
+
+    <button class="accordion">Radiologist</button>
+    <div class="panel">
+      <p>Dr. Juan Carlos Jones, DO</p>
+      <img class="insurance-upload-complete" src="images/Radiography-pana-2.png">
+    </div>
+
+    <button class="accordion">Cardiologist</button>
+    <div class="panel">
+      <p>Dr. Sandy Huynh, DO</p>
+      <img class="insurance-upload-complete" src="images/Doctor-rafiki.png">
+    </div>
+</body>
+
+
+
+
+
+
+<!-- // Body and Image -->
+<br><br><br>
 <!-- footer -->
 <div class="footer">
-    <div class="footer-content">
-      <div class="footer-section about"></div>
-      <div class="footer-section links"></div>
-      <div class="footer-section contact-form"></div>
-    </div>
-  
     <div class="footer-bottom">
-      <ul>
-        <a li>English</a></li> |
-        <a li>Spanish</a></li> |
-        <a li>Chinese</a> </li>|
-        <a li>More</a></li>
-      </ul>
       &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
     </div>
   </div>
   <!-- // footer -->
+
+
+<script type="text/javascript" src="src/scripts.js"></script>
