fixed login/signup button

--- a/login.html
+++ b/login.html
@@ -39,8 +39,8 @@
         <input type="email" class="input" id="user_email" autocomplete="off" placeholder="Email">
         <input type="text" class="input" id="user_name" autocomplete="off" placeholder="Username">
         <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
-        <input type="submit" class="button" value="Sign Up">
       </form><!--.login-form-->
+      <a href="overview.html"><button class="login-button" value="signup">Sign Up</button></a>
       <div class="help-text">
         <p>By signing up, you agree to our</p>
         <p><a href="#">Terms of service</a></p>
@@ -55,8 +55,8 @@
           <input type="checkbox" class="checkbox" id="remember_me">
           <label for="remember_me">Remember me</label></p>
         </div>
-        <input type="submit" class="button" value="Login" formaction="overview.html">
       </form><!--.login-form-->
+      <a href="overview.html"><button class="login-button" value="login">Login</button></a>
       <div class="help-text">
         <p><a href="#">Forget your password?</a></p>
       </div><!--.help-text-->
